dev/css/loops.scss
// @todo fix output styles

@import "slider";

$border-color: #666;
$border-light: 1px solid lighten($border-color, 20%);
$border: 2px solid $border-color;
$control-height: 2.5rem;

@mixin square($size) {
	width: $size;
	height: $size;
	line-height: $size;
}

* {
	box-sizing: border-box;
}

html {
	height:100%;
}

body {
	font-family: 'Source Sans Pro', Arial;
	padding: 0;
	margin: 0;
	height:100%
}

#wrapper {
	position:absolute;
	width:100%;
	overflow-x: hidden;
}

h2.name {
	position:absolute;
	top: $control-height;
	margin: 0;
	width: 100%;
	text-align: center;
	font-size: 1.3em;
	font-weight: normal;
}

#drumseq, #bseq {
    display:flex;
    font-size:.8em;
    padding:.2em;
    width: 60%;
    float:left;
}

#drum-grid, #bass-grid {
    flex:1;
    border: $border;
}

#drum-labels, #bass-labels {
	width: 5em;
}

.row {
    display:flex;
    border-bottom: $border-light;
    height: 1.2em;
}

.row:last-child {
	border-bottom-width: 0;
}

.label {
    height: 1.2em;
    text-align: right;
    padding-right:.2em;
}

/**
* Grid cells
*/
$cell-color: #fff;
$cell-color-dark: #eee;
$note-color: #5E7FD6;
$note-playing-color: complement($note-color);
@mixin note-background($color) {
	background: $color;
	box-shadow: inset 1px 1px 2px 0 lighten($color, 20%),
		inset -1px -1px 2px 0 darken($color, 10%);
}
@mixin cell-playing($color) {
	background: mix($color, lighten(blue,25%), 95%);
}

.cell {
    flex: 1;
	border-left: $border-light;
	position:relative;
	background: $cell-color;
}

.cell:nth-of-type(4n + 1) {
	border-left: $border;
}

.cell:first-child {
	border-left-width: 0;
}

.cell-inner {
	position:absolute;
	height:100%;
	left:0;
	right:0;
}

.cell-inner.on {
	border:1px solid darken($note-color,20%);
	background:#fff;
	z-index: 1;
}

.cell-inner .note {
	@include note-background($note-color);
	width:100%;
	height:100%;
	opacity: .8;
	display:none;	
}

.cell-inner.on .note {
	display:block;
}

.cell-inner.playing:not(.on) {
	@include cell-playing($cell-color);
}

.cell-inner.on.playing .note {
	@include note-background($note-playing-color);
}

.blackNote .cell
{
	background: $cell-color-dark;
}

.blackNote .cell-inner.playing {
	@include cell-playing($cell-color-dark);
}

.panel {
	// temporary - to add extra sliders
	// clear:left;
	// overflow: hidden;
}
h3 {
	margin: 0;
	padding: .2em 0 .1em 0;
}
header {
	padding-left:1em;
}
.panel p {
		margin:0;
		padding-bottom: .2em;
		font-size: .75em;
		padding:.5em;
}
#pattern-copy {
	margin-top: -1.2em;
}
$pattern-background: #eee;

@mixin pattern() {
	@include square(2em);
	border: $border-light;
	padding:0 .2em;
	text-align:center;
	margin-right:.5em;
	border-radius:.1em;
	background: $pattern-background;
}
.patterns, .sequence {
	margin-bottom:.5em;
	overflow:hidden;
	div {
		float:left;
	}
	.pattern {
		@include pattern;
	}
	.pattern.active {
		border: $border;
		background: darken($pattern-background, 10%);
	}
	.pattern.over {
		border-color:red;
		border-width:2px;
	}
}
.pattern.shadow {
	@include pattern;
	position:absolute;
	opacity: .8;
	top:0;
	left:0;
}
.sequence .label,
.patterns .label {
	width: 5em;
	height: 2em;
	line-height:2em;
}
.mode {
	clear:left;
	float: none;
	width:100%;
	text-align:center;
	height:2em;
	line-height:2em;
}
#fx-panel {
    position: absolute;
    top: 0;
    background: #fff;
    width: 100%;
    height: 100%;
    z-index:2;
    display: flex;
    transform: translate3d(101%,0,0);
    transition-property: transform;
    transition-duration: .4s;
}

#fx-panel.active {
	transform: translate3d(0,0,0);
	transition-property: transform;
    transition-duration: .4s;
}

.fx-section {
    //float: left;
    flex: 1;
    margin: 1em;
    padding:.5em 1em;
    h4 {
    margin: 0 0 .5em 0;
    font-size: 1.2em;
	}
	h5 {
	    margin: .8em 0 .2em 0;
	    font-size: 1em;
	}
	label {
	    width: 5em;
	    display: inline-block;
	    text-align: right;
	    padding-right: .2em;
	    margin-bottom: .2em;
	    font-size:.8em;
	}
}
output {
	font-size:.8em;
	width:3em;
	display:inline-block;
	text-align: center;
	border:1px solid #cca;
	
}

#controls {
	height: $control-height;
	border-bottom: $border;
	div {
		margin: {
			left: .5em;
			right: 3em;
		}
		display:inline;
	}
	h2 {
		display:inline-block;
		padding: {
			left:.5em;
			right:1em;
		}
		background:#ccc;
		height:100%;
		margin:0;
		border-right: $border;
	}
}

// slider styles
$slider-height: 1.25em;
$slider-width: 8.5em;
$thumb-height: $slider-height * 1.4;
$thumb-color: #d5d5d5;
$thumb-border: grayscale(adjust-color($thumb-color, $saturation:  9%,  $lightness: -14%));
$thumb-shadow:  grayscale(adjust-color($thumb-color, $saturation: -8%,  $lightness:  15%));
$thumb-gradient: grayscale(adjust-color($thumb-color, $saturation:  9%,  $lightness: -11%));


@include slider($width: $slider-width, $height: $slider-height) {
	background:#fcfcfc;
	box-shadow: inset 1px 1px 1px 1px #ddd;
	border-radius: 1.5em;
	padding: 0 ($slider-height / 3);
}

@include slider-track($height: $slider-height / 3) {
	background: #ccc;
	box-shadow: inset 1px 1px 1px 1px #999;
	border-radius: 1.5em - ($slider-height / 2);
}

@include slider-thumb($width: $thumb-height, $height: $thumb-height) {
	margin-top: -1 * (($slider-height / 3) + ($thumb-height - $slider-height) / 2);	
	border: 1px solid $thumb-border;
	border-radius: 100%;
	box-shadow: inset 0 1px 0 0 $thumb-shadow;
	background-color: $thumb-color;
	background-image: linear-gradient($thumb-color $thumb-gradient);
}

@include slider-thumb-active {
	$active-color: grayscale(adjust-color($thumb-color, $saturation: -4%, $lightness: -5%));
    $shadow-color: grayscale(adjust-color($thumb-color, $saturation: -7%, $lightness:  5%));
    $gradient-color: grayscale(adjust-color($thumb-color, $saturation:  8%, $lightness: -14%));
    
    box-shadow: inset 0 1px 0 0 $shadow-color;
    background-color:$active-color;
    background-image: linear-gradient($active-color $gradient-color);
}

#modal {
	position:absolute;
	top: $control-height + 1rem;
	left:50%;
	width: 30em;
	min-height:10em;
	background: $pattern-background;
	border: $border-light;
	margin:0 -15em;
	padding:1em;
	text-align:center;
	box-shadow:1px 1px 1px #bbb;
	border-radius:.2em;
	opacity:0;
	transform: translateX(500%);
	transition-property: transform, opacity;
	transition-duration: 0,.2s;
	transition-delay: .2s,0;
	z-index:2;
}

#modal.active {
	opacity:1;
	transform: translateX(0);
	transition-delay: 0,0;
}

button {
	// button styles from bourbon: need to simplify!
	border: 1px solid #b1b1b1;
	border-radius: 3px;
	box-shadow: inset 0 1px 0 0 #fbfbfb;
	color: #333333;
	display: inline-block;
	font-size: inherit;
	font-weight: bold;
	background-color: #d5d5d5;
	background-image: linear-gradient(#d5d5d5 #b9b9b9);
	padding: 7px 18px;
	text-decoration: none;
	text-shadow: 0 1px 0 #dfdfdf;
	background-clip: padding-box;
	border: 1px solid #b8aaaa;
	border-radius: 3px;
	box-shadow: inset 0 1px 0 0 #fbfbfb;
	color: #333333;
	display: inline-block;
	font-size: inherit;
	font-weight: bold;
	background-color: #d5d5d5;
	background-image: linear-gradient(#d5d5d5 #bfb3b3);
	padding: 7px 18px;
	text-decoration: none;
	text-shadow: 0 1px 0 #e2dcdc;
	background-clip: padding-box;

	&:hover:not(:disabled) {
		box-shadow: inset 0 1px 0 0 #e2e2e2;
		cursor: pointer;
		background-color: #c8c8c8;
		background-image: linear-gradient(#c8c8c8 #b1b1b1); 
	}
	&:active:not(:disabled), &:focus:not(:disabled) {
		border: 1px solid #b1b1b1;
		box-shadow: inset 0 0 8px 4px #aaaaaa, inset 0 0 8px 4px #aaaaaa; 
	}
	&:hover:not(:disabled) {
		box-shadow: inset 0 1px 0 0 #e2e2e2;
		cursor: pointer;
		background-color: #c8c8c8;
		background-image: linear-gradient(#c8c8c8 #b8abab); 
	}
	&:active:not(:disabled), &:focus:not(:disabled) {
		border: 1px solid #b8aaaa;
		box-shadow: inset 0 0 8px 4px #b0a4a4, inset 0 0 8px 4px #b0a4a4; 
	}
	&:disabled {
		opacity: 0.5;
		cursor: not-allowed; 
	}
	
	font-size:.7em;
	padding:.2em .8em;
	font-weight: normal;
	&.drum-edit {
		padding:0 .5em;
		margin-left:.5em;
	}
}

#editors {
	position:absolute;
	width:100%;
	height:100%;
	top:0;
	left:0;
	background:rgba(10,10,10,.5);
	display:none;
	z-index:3;
	&.active {
		display:block;
	}
}
.editor {
	position: absolute;
	background: #FFF;
	border: 1px solid #000;
	left: 15%;
	top: 15%;
	right: 15%;
	bottom: 15%;
	display:none;
	z-index:3;
	.fx-wrapper {
		display: flex;
		flex-wrap: wrap;
	}
	&.active {
		display:block;
	}
}

// background for lfo editors
// @todo - refactor into more common (since styles are the same as #editors above)
#lfos {
	position:absolute;
	width:100%;
	height:100%;
	top:0;
	left:0;
	background:rgba(10,10,10,.5);
	display:none;
	z-index:4;
	&.active {
		display:block;
	}	
}

.lfo {
	position: absolute;
	background: #FFF;
	border: 1px solid #000;
	left: 15%;
	top: 15%;
	right: 15%;
	bottom: 15%;
	display:none;
	z-index:4;
	.fx-wrapper {
		display: flex;
		flex-wrap: wrap;
	}
	&.active {
		display:block;
	}
}

